# mpimemu

./: AUTHORS  COPYRIGHT  ChangeLog  LICENSE  Makefile  Makefile.am  README  README.QUICKSTART  README.md  THANKS  TODO  _config.yml  autogen  configure.ac  index.html  index.md  mkstats  mpi_mem_usage.c  params.json  plot_node_data.gp
memnesia/: CMakeLists.txt  README.md  TODO
memnesia/test/: CMakeLists.txt  mpi-alltoall.c  mpi-init.c  mpi-sendrecv.c  smaps-bench.cc
memnesia/trace/: CMakeLists.txt  memnesia-pmpi.cc  memnesia-rt.cc  memnesia-rt.h  memnesia-sample.h  memnesia-sampler.cc  memnesia-sampler.h  memnesia-timer.cc  memnesia-timer.h  memnesia.h
memnesia/utils/: memnesia-heat-plot  memnesia-plot  memnesia-report  memnesia-run-scaling-study  which-mpi-calls.sh
memnesia/utils/run-configs/: hpcg_weak.py  kripke_weak.py  lulesh_weak.py  osu_mbw_mr.py
mpimcb/: .ycm_extra_conf.py  CMakeLists.txt  README.md
mpimcb/test/: CMakeLists.txt  mpi-init.c  mpi-sendrecv.c
mpimcb/trace/: CMakeLists.txt  mpimcb-mem-common.h  mpimcb-mem-hook-state.c  mpimcb-mem-hook-state.h  mpimcb-mem-hooks.cc  mpimcb-mem-hooks.h  mpimcb-mem-interposers.c  mpimcb-mem-stat-mgr.cc  mpimcb-mem-stat-mgr.h  mpimcb-memory.h  mpimcb-pmpi.cc  mpimcb-rt.cc  mpimcb-rt.h  mpimcb-timer.cc  mpimcb-timer.h  mpimcb-trace.cc
mpimcb/utils/: plot-mem-usage-over-time  which-mpi-calls.sh
mpimcu/: CMakeLists.txt  README.md
mpimcu/test/: CMakeLists.txt
mpimcu/trace/: CMakeLists.txt  mpimcu-mem-hook-state.c  mpimcu-mem-hook-state.h  mpimcu-mem-hooks.cc  mpimcu-mem-hooks.h  mpimcu-mem-interposers.c  mpimcu-mem-stat-mgr.cc  mpimcu-mem-stat-mgr.h  mpimcu-pmpi.cc  mpimcu-rt.cc  mpimcu-rt.h  mpimcu-sample.h  mpimcu-sampler.cc  mpimcu-sampler.h  mpimcu-timer.cc  mpimcu-timer.h  mpimcu.h
mpimcu/utils/: plot-mem-usage-over-time
src/: Makefile.am  constants.h  conv_macros.h  memory_usage.c  memory_usage.h  mmu_args.c  mmu_args.h  mmu_constants.h  mmu_conv_macros.h  mmu_list.c  mmu_list.h  mmu_memory.c  mmu_memory.h  mmu_memory_common.h  mmu_memory_sample.c  mmu_memory_sample.h  mmu_mpi.c  mmu_mpi.h  mmu_process.c  mmu_process.h  mmu_util.c  mmu_util.h  mpimemu-mkstats  mpimemu-plot  mpimemu-run  mpimemu.c  mpimemu.h  util.c  util.h
util/: env-setup-bash  env-setup-bash-local  env-setup-local-bash  env-setup-xe6-bash  mmu_config  mmu_util  plot-node-data.gp  plot-proc-data.gp  plot_proc_data.gp  run_me
