#
# Copyright (c) 2011-2019 Triad National Security, LLC
#                         All rights reserved.
#
# This file is part of the libquo project. See the LICENSE file at the
# top-level directory of this distribution.
#

SUBDIRS = src

EXTRA_DIST = \
AUTHORS README THANKS COPYRIGHT autogen ChangeLog util README.QUICKSTART \
docs
