###############################################################################
# Copyright (c) 2011-2012 Los Alamos National Security, LLC.
#                         All rights reserved.
#
# This program was prepared by Los Alamos National Security, LLC at Los Alamos
# National Laboratory (LANL) under contract No. DE-AC52-06NA25396 with the U.S.
# Department of Energy (DOE). All rights in the program are reserved by the DOE
# and Los Alamos National Security, LLC. Permission is granted to the public to
# copy and use this software without charge, provided that this Notice and any
# statement of authorship are reproduced on all copies. Neither the U.S.
# Government nor LANS makes any warranty, express or implied, or assumes any
# liability or responsibility for the use of this software.
################################################################################

bin_PROGRAMS = mpimemu

mpimemu_SOURCES = \
mmu_constants.h \
mmu_conv_macros.h \
mmu_memory_common.h \
mmu_util.h mmu_util.c \
mmu_args.h mmu_args.c \
mmu_list.h mmu_list.c \
mmu_memory_sample.h mmu_memory_sample.c \
mmu_memory.h mmu_memory.c \
mmu_process.h mmu_process.c \
mmu_mpi.h mmu_mpi.c \
mpimemu.c

bin_SCRIPTS = \
mpimemu-run \
mpimemu-mkstats
