#
# Copyright (c) 2011-2019 Triad National Security, LLC
#                         All rights reserved.
#
# This file is part of the mpimemu project. See the LICENSE file at the
# top-level directory of this distribution.
#

bin_PROGRAMS = mpimemu

mpimemu_SOURCES = \
mmu_constants.h \
mmu_conv_macros.h \
mmu_memory_common.h \
mmu_util.h mmu_util.c \
mmu_args.h mmu_args.c \
mmu_list.h mmu_list.c \
mmu_memory_sample.h mmu_memory_sample.c \
mmu_memory.h mmu_memory.c \
mmu_process.h mmu_process.c \
mmu_mpi.h mmu_mpi.c \
mpimemu.c

dist_bin_SCRIPTS = \
mpimemu-run \
mpimemu-mkstats \
mpimemu-plot
